Fixed layout overflow problem

--- a/intermine/webapp/main/resources/webapp/css/widget.css
+++ b/intermine/webapp/main/resources/webapp/css/widget.css
@@ -28,7 +28,7 @@ div.widgetdatawait{
 div.widgetdata{
     clear:left;
     padding:0px;
-    height:360px;
+    height:355px;
     width:450px;
     overflow: auto;
     overflow-y:auto;
